gruntfile changes for building ember (not finished, gives EMFILE error on watch)

--- a/qApp/app/index.html
+++ b/qApp/app/index.html
@@ -17,8 +17,10 @@
   <body>
     {{content-for 'body'}}
 
+<!-- build:js assets/app.min.js -->
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-cli-wordpress.js"></script>
+<!-- /build -->
 
     {{content-for 'body-footer'}}
   </body>
